--- a/BDM/database/templates/create_work_ent.html
+++ b/BDM/database/templates/create_work_ent.html
@@ -17,20 +17,20 @@
     </div>
 <div class="col-sm-12">
       <font size="4">
-        <span class="label label-primary">{% trans "Titulo do trabalho" %}</span>
+        <span class="label label-primary">{% trans "Titulo da Obra" %}</span>
       </font>
                     {{ form.titleOfTheWork  }}
     </div>
 
       <div class="col-sm-12">
       <font size="4">
-        <span class="label label-primary">{% trans "Local de origem do trabalho" %}</span>
+        <span class="label label-primary">{% trans "Local de origem da Obra" %}</span>
       </font>
                     {{ form.placeOfOriginOfTheWork }}
     </div>
 <div class="col-sm-12">
       <font size="4">
-        <span class="label label-primary">{% trans "Data do trabalho" %}</span>
+        <span class="label label-primary">{% trans "Data da Obra" %}</span>
       </font>
                     {{ form.dateOfTheWork }}
     </div>
@@ -49,7 +49,7 @@
     </div>
 <div class="col-sm-12">
       <font size="4">
-        <span class="label label-primary">{% trans "Forma do trabalho" %}</span>
+        <span class="label label-primary">{% trans "Forma da Obra" %}</span>
       </font>
                     {{ form.formOfWork }}
     </div>
@@ -62,13 +62,13 @@
 {#    </div>#}
 <div class="col-sm-12">
       <font size="4">
-        <span class="label label-primary">{% trans "Audiencia do trabalho" %}</span>
+        <span class="label label-primary">{% trans "Audiencia do Obra" %}</span>
       </font>
                     {{ form.intendedAudience }}
     </div>
 <div class="col-sm-12">
       <font size="4">
-        <span class="label label-primary">{% trans "Contexto para o trabalho" %}</span>
+        <span class="label label-primary">{% trans "Contexto para o Obra" %}</span>
       </font>
                     {{ form.contextForTheWork }}
     </div>
