--- a/BDM/database/templates/list_all_ent.html
+++ b/BDM/database/templates/list_all_ent.html
@@ -18,11 +18,11 @@
                 </thead>
 
                 <thead>
-                <th>{% trans "Trabalho" %}</th>
+                <th>{% trans "Obra" %}</th>
                 </thead>
 
                 <thead>
-                <th>{% trans "Titulo do Trabalho" %}</th>
+                <th>{% trans "Titulo da Obra" %}</th>
                 <th>{% trans "Data" %}</th>
                 <th>{% trans "Audiência" %}</th>
                 </thead>
@@ -32,7 +32,7 @@
                     <td>{{ work.intendedAudience }}</td>
                 </tr>
                 <thead>
-                <th>{% trans "Expressões relacionada ao Trabalho" %}</th>
+                <th>{% trans "Expressões relacionada a Obra" %}</th>
                 </thead>
 
                 <thead>
@@ -95,7 +95,7 @@
 
                     {% empty %}
 
-                    <td> {% trans "Não existem expressões para este trabalho." %}</td>
+                    <td> {% trans "Não existem expressões para esta Obra." %}</td>
 
                 {% endfor %}
 
