--- a/BDM/database/templates/list_work_ent.html
+++ b/BDM/database/templates/list_work_ent.html
@@ -30,7 +30,7 @@
 
                 {% empty %}
 
-                {% trans "Não existem trabalhos cadastrados." %}
+                {% trans "Não existem Obras cadastrados." %}
 
             {% endfor %}
             </tbody>
