--- a/BDM/templates/dashboardUser/side_bar.html
+++ b/BDM/templates/dashboardUser/side_bar.html
@@ -18,14 +18,14 @@
             </a></li>
 
             <li class="treeview">
-                <a href="#"><i class="fa fa-file"></i> <span>{% trans "Trabalho"%}</span>
+                <a href="#"><i class="fa fa-file"></i> <span>{% trans "Obra"%}</span>
                     <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="{% url 'create_work_ent' %}">{% trans "Criar um Trabalho"%}</a></li>
-                    <li><a href="{% url 'list_work_ent' %}">{% trans "Listar Trabalhos"%}</a></li>
+                    <li><a href="{% url 'create_work_ent' %}">{% trans "Criar uma Obra"%}</a></li>
+                    <li><a href="{% url 'list_work_ent' %}">{% trans "Listar Obras"%}</a></li>
                 </ul>
             </li>
 
