--- a/BDM/database/templates/create_work_ent.html
+++ b/BDM/database/templates/create_work_ent.html
@@ -3,6 +3,12 @@
 <form action='' method="POST">
   <div class="form-group">
     {% csrf_token %}
+
+            <div class="col-sm-12">
+      <font size="8">
+        <span class="label label-primary">{% trans "Obra" %}</span>
+      </font>
+</div>
       <div class="col-sm-12">
       <font size="6">
         <span class="label label-primary">{% trans "Obrigatório" %}</span>
